--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,9 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery {
+  display: flex;
+  flex-direction: row;
+  width: 1200 px;
+}
