--- a/css/common.css
+++ b/css/common.css
@@ -26,5 +26,9 @@ button {
 .gallery {
   display: flex;
   flex-direction: row;
-  width: 1200 px;
+  /* width: 1200 px; */
+}
+
+li {
+  width: 300 px;
 }
